# fullstack_starter

./: .gitignore  docker-compose.yaml
services/service_a/: main.py  pyproject.toml
services/service_b/: pyproject.toml
shared/service_utils/: pyproject.toml
shared/service_utils/src/: utils.py
