[tool.poetry]
name = "service-a"
version = "0.1.0"
description = "Microservice A"
authors = ["Piotr Święcik <piotr.swiecik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
service-utils = { path = "../../shared/service_utils", develop = true }
fastapi = {extras = ["standard"], version = "^0.115.4"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
